--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,19 +139,17 @@
 
     <!-- Text für Chancen-Risiken-Modul -->
     <string name="wahr_oder_falsch_introduction">
-        Willkommen!\n\nHier geht es darum, eine Aussage über eine Big Data-Umsetzung entweder als "Wahrheit" (d.h. realistisch) oder als "Lüge" zu kennzeichnen.\n\nHiermit soll geprüft, ob du das heutige Potenzial von Big Data richtig einschätzen kannst.
+        Willkommen!\n\nHier geht es darum, eine Aussage über eine Big Data-Umsetzung entweder als "Wahrheit" (grün) oder als "Lüge" (rot) zu kennzeichnen.\n\nHiermit soll geprüft, ob du das heutige positive sowie negative Potenzial von Big Data richtig einschätzen kannst.
     </string>
 
     <string-array name="auflösung">
-        <item>Die Datensicherheit umfasst alle Maßnahmen zum Schutz vor unberechtigtem Datenzugriff.\nSie kann als technische Umsetzung zur Gewährleistung des Datenschutzes verstanden werden.</item>
-        <item>Der Datenschutz greift immer dann, wenn personenbezogene Daten verarbeitet werden. Eine Einwilligung der Betroffenen dafür muss stets erfolgen.</item>
-        <item>Personenbezogene Daten sind alle Daten, mit denen Menschen direkt bzw. indirekt identifiziert werden können (z.B. Geburtsdatum, Adresses, usw.).</item>
-        <item>Da der Datenschutz nur bei der Verarbeitung personenbezogener Daten greift, muss nur hierfür stets der Verwendungszweck angegeben werden.\n\nAnonymisierte Daten sind von dieser Zweckbindung ausgenommen.</item>
-        <item>Explorative Analysen, d.h. Analysen, die kein vordefiniertes Ziel haben und mit denen man neue Erkenntnisse aus Daten gewinnen möchte, sind nicht erlaubt, da das Gebot der Zweckbindung verletzt wird.\n\nDies stellt einen starken Einschnitt für Big Data-Anwender dar.</item>
-        <item>Sofern dies im Vorhinein nicht vertraglich geklärt wurde, haben Betroffene keinen Anspruch auf Provision am Umsatz des Verantwortlichen der Datennalyse</item>
-        <item>Die Verordnung gilt für die (automatisierte) Verarbeitung personenbezogener Daten und somit sowohl für den privaten Sektor als auch für öffentliche Verwaltungen.</item>
-        <item>Vor jeder Verarbeitung von personenbezogenen Daten muss der Verantwortliche die Einwilligung von Betroffenenen einholen und diese auch rückrufen können.</item>
-        <item>Zwar bezieht sich das Datenschutzrecht auf personenbezogene Daten, jedoch wird bei u.a. anonymen Daten geprüft, inwieweit (d.h. mit welchem Aufwand) diese wieder deananonymisiert werden können.</item>
+        <item>Ein derartiges \"Sozialkredit-System\" wird momentan von der chinesischen Regierung geplant und soll bis zum Jahr 2020 verpflichtend für alle Bürger in Kraft treten, um das Verhalten seiner Bürger besser steuern und kontrollieren zu können.\nBeispielsweise gibt es Punktabzüge für Verkehrsdelikte und Aufwertungen bei Freiwilligenarbeit. Sogar zwischenmenschliches Verhalten soll in solche Scores mit einfließen.</item>
+        <item>So etwas existiert nicht (zumindest nicht in der realen Welt). Dennoch gibt es Maßnahmen bezüglich der "prädiktiven Polizeiarbeit", um potentielle Straftäter und gefährdete Gebiete zu lokalisieren und dort die Polizeipräsenz zu erhöhen.\nDadurch soll die Effizienz erhöht werden.</item>
+        <item>Speditionen verwenden derartige Verfahren, um ihre Produktivität zu erhöhen.\nDes Weiteren können Dienstleistungen und Produkte besser auf Individuen abgestimmt werden. In der Autoversicherungsbranche werden, ausgehend vom gemessenen Fahrverhalten, vorbildliche Fahrer mit Rabatten belohnt. Die Fahrer müssen diesen Datenanalysen jedoch zustimmen.</item>
+        <item>Solche Gesundheitsrichtlinien werden von Unternehmen mit sogenannten \"Wellness-Programmen\" kombiniert, um Mitarbeiter anzuregen, gesund zu leben.\nWer sich nicht dran hält, muss einen Zusatzbeitrag zur Krankenversicherung zahlen.</item>
+        <item>Auch wenn Gesundheitdaten von Patienten gründlich analysiert werden können, sind für die Pflege weiterhin Menschen notwendig.</item>
+        <item>Zwar wird bezüglich autonomen Waffensystemen viel geforscht, einige bereits umgesetzt und viel über die dazgehörigen ethischen und rechtlichen Aspekte diskutiert, jedoch gibt es solch einen Roboter (noch) nicht.</item>
+        <item>Derartige Big Data-Systeme existieren bereits. Diese Methode wird \"Microtargeting\" genannt und dient dazu nur diejenigen Personen gezielt anzusprechen, die als potentielle Käufer bzw. Wähler in Frage kommen.\n Hierbei werden insbesondere die Bedürfnisse und Befürchtungen jeder Gruppe identifiziert und Verhalten prognostiziert.</item>
     </string-array>
 
 
