--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
         •	oft ist das Problem, dass Daten nicht oder nur unzureichend zur Verfügung stehen\n\n
         •	außerdem muss geklärt werden, ob die Daten repräsentativ und für die angestrebten Zwecke verwandbar sind\n\n
         •	hier kann es zu Interessenkonflikten zwischen den Verwendern und den Bereitstellern von Daten kommen (z.B. bezüglich der Privatsphäre)\n\n
-        •	der rechtliche Umfang der Datennutzung muss berücksichtigt werden
+        •	der rechtliche Aspekt der Datennutzung muss berücksichtigt werden
     </string>
     <string name="challenges_description2">
         •	die erhobenen Daten werden derartig gefiltert, um relevante und unwichtige Daten voneinander zu trennen\n\n
